tooltip-flickering tooltip flickering issue fixed

--- a/packages/flow-core/src/components/f-popover/f-popover-global.scss
+++ b/packages/flow-core/src/components/f-popover/f-popover-global.scss
@@ -113,7 +113,7 @@ f-popover {
 		background-color: var(--color-surface-tertiary);
 	}
 
-	&[open] {
+	&[open]:not(.tooltip) {
 		&::after {
 			content: "";
 			background-color: transparent;
